<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/general">
        <SwitchPreferenceCompat
            android:key="notify_only_when_muted"
            android:defaultValue="true"
            app:singleLineTitle="false"
            android:title="@string/notify_only_when_muted" />
        <SwitchPreferenceCompat
            android:key="auto_mute"
            android:defaultValue="false"
            app:singleLineTitle="false"
            android:title="@string/auto_mute" />
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            android:key="about"
            android:title="@string/about" />
        <Preference
            android:key="debug"
            android:singleLineTitle="false"
            android:title="@string/debug_info"
            android:enabled="false" />
    </PreferenceCategory>
</PreferenceScreen>